FLUID-6117: Fixing navigation on mobile view

--- a/demos/prefsFramework/css/new.css
+++ b/demos/prefsFramework/css/new.css
@@ -746,7 +746,7 @@ body {
     padding-bottom: 0.13rem;
     margin-top: 3.13rem;
     line-height: normal;
-    height: 2.5rem;
+    min-height: 2.5rem;
 }
 .panelizer-view-mode.node-full.node-resource-collection .header-row .pane-node-field-focus-area,
 .panelizer-view-mode.node-full.node-resource-collection .header-row .pane-node-field-category {
